--- a/src/styles.css
+++ b/src/styles.css
@@ -36,7 +36,7 @@ body {
 
 .Item {
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between;
   transition: background-color 1s;
 }
 
@@ -50,12 +50,31 @@ body {
 }
 
 .Item-title {
-  width: 100%;
-  padding: 20px 10px;
+  padding: 20px 0px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
 }
 
 .Item-actions {
   display: flex;
   justify-content: flex-end;
+  align-items: center;
   padding: 20px 20px 20px 10px;
+}
+
+.btn {
+  width: 60px;
+  height: 20px;
+}
+
+.left-block {
+  width: 100%;
+  display: flex;
+}
+
+.alocate {
+  width: 150px;
+  text-align: center;
 }
